--- a/ludmila_koltsova/styles/style.css
+++ b/ludmila_koltsova/styles/style.css
@@ -9,6 +9,7 @@ header {
     background: url('../images/background.png') no-repeat center center/cover;
     height: 250px;
     color: white;
+    text-shadow: 3px 3px 4px black;
     text-align: center;
     display: flex;
     flex-direction: column;
