--- a/bogdanova_viktoria/styles/style.css
+++ b/bogdanova_viktoria/styles/style.css
@@ -30,7 +30,9 @@ header h2 {
 nav {
     background-color: #333;
     padding: 10px;
-    text-align: right;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 nav a {
@@ -42,6 +44,14 @@ nav a {
 
 nav a:hover {
     text-decoration: underline;
+}
+
+nav a:first-child {
+    margin-right: auto;
+}
+
+.back_button {
+    padding-left: 100px;
 }
 
 .container {
